<resources>
    <string name="app_name">Oter</string>
    <string name="activity_new_oter_name">New Oter</string>
    <string name="activity_edit_oter_name">Edit Oter</string>

    <string name="dialog_set_time_title">Set Time</string>
    <string name="dialog_set_time_sub1">Send Oter when I am</string>
    <string name="dialog_set_time_sub2">minutes away from my destination</string>

    <string name="dialog_add_location_title">Set Location</string>
    <string name="dialog_add_location_hint">Search</string>

    <string name="no_oters_title">No Oters Scheduled</string>
    <string name="no_oters_subtitle">Tap the + to create an Oter</string>

    <string name="text_message_hint">Type your message here</string>
    <string name="schedule_oter">Schedule</string>
    <string name="delete_oter">Delete</string>
    <string name="save_oter">Save</string>

    <string name="test_title">Mom\'s House</string>
    <string name="test_text">\"I\'ll be there soon!\"</string>
    <string name="test_time">15 minutes away</string>

    <string name="add_location_detail_hint">Nickname</string>
    <string name="set_nickname">Give this location a nickname</string>

    <string name="location_error">Select a location</string>
    <string name="contact_error">Select at least one contact</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="google_places_api_key">AIzaSyCCpWXxqSycqLzMGvkEDiGNbIaq0FNOhH8</string>
</resources>
