<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.joebruzek.oter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="left"
            android:textSize="24sp"
            android:background="@color/accent"
            android:textColor="@android:color/white"
            android:text="@string/dialog_set_time_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/dialog_set_time_sub1"/>

        <EditText
            android:id="@+id/set_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="48sp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:gravity="center"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/dialog_set_time_sub2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/set_time_negative_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textColor="@color/primary"
            android:elevation="0dp"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/set_time_positive_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textColor="@color/primary"
            android:elevation="0dp"
            android:text="@string/confirm"/>

    </LinearLayout>
</LinearLayout>