<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="left"
            android:textSize="24sp"
            android:background="@color/accent"
            android:textColor="@android:color/white"
            android:text="@string/dialog_add_location_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dialog_add_location_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:textColor="@android:color/black"
                android:hint="@string/dialog_add_location_hint"
                android:textColorHint="@android:color/secondary_text_dark"/>

            <ImageButton
                android:id="@+id/dialog_add_location_search_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_plus"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dialog_add_location_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="252dp"
            android:clickable="true"
            android:focusable="true"
            android:scrollbars="vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_add_location_bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_add_location_negative_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textColor="@color/primary"
            android:elevation="0dp"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/dialog_add_location_positive_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textColor="@color/primary"
            android:elevation="0dp"
            android:text="@string/confirm"/>

    </LinearLayout>
</LinearLayout>