<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/edit_oter_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp">
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="6dp"
        card_view:cardCornerRadius="4dp"
        card_view:elevation="4dp">

        <EditText
            android:id="@+id/edit_oter_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:gravity="top|left"
            android:textColor="@android:color/black"
            android:hint="@string/text_message_hint"
            android:textColorHint="@android:color/secondary_text_dark"/>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/edit_oter_time_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_time"/>

        <ImageButton
            android:id="@+id/edit_oter_location_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_location"/>

        <ImageButton
            android:id="@+id/edit_oter_contact_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_contact"/>
    </LinearLayout>

    <TextView
        android:id="@+id/edit_oter_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:padding="8dp"
        android:textSize="14sp"
        android:gravity="center"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/edit_oter_contacts_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/edit_oter_schedule_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:elevation="0dp"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:textColor="@color/primary"
            android:text="@string/schedule_oter"/>

        <Button
            android:id="@+id/edit_oter_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:elevation="0dp"
            android:textSize="14sp"
            android:visibility="gone"
            android:layout_alignTop="@+id/edit_oter_schedule_button"
            android:layout_toStartOf="@+id/edit_oter_schedule_button"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/delete_oter"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />


    </RelativeLayout>

</LinearLayout>